# RedCall-vs-BlueCall

./: .env.example  .gitignore  LICENSE  README.md  debug_voice.py  evaluator.py  main.py  orchestrator.py  pyproject.toml  voice_call.py
agents/: __init__.py
agents/family/: __init__.py  graph.py  prompts.py  state.py
agents/scammer/: __init__.py  graph.py  prompts.py  state.py
agents/senior/: __init__.py  graph.py  prompts.py  state.py
core/: __init__.py  llm.py  voice.py
e2e/: agent_to_agent_call.py  agent_to_agent_websocket.py  requirements.txt  run_agent_conversation.sh
e2e/agents/: main.py  my_agent.py  simple_agent.py
e2e/agents/.smallestai/: config.toml
webui/: README.md  run_backend.sh  run_demo.sh  run_frontend.sh  setup_node.sh
webui/backend/: server.py  simulation_runner.py
webui/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
webui/frontend/src/: App.tsx  index.css  types.ts
webui/frontend/src/components/: AgentCard.tsx  CallHeader.tsx  Controls.tsx  ConversationPanel.tsx  LiveTranscript.tsx  ProgressBar.tsx
webui/frontend/src/hooks/: useSimulation.ts
