[project]
name = "redcall-vs-bluecall"
version = "0.1.0"
description = "Multi-agent adversarial scam simulation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
    "smallestai>=1.0.0",
]

[project.scripts]
redcall = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "agents"]
