[project]
name = "redcall-vs-bluecall"
version = "0.1.0"
description = "Multi-agent adversarial scam simulation system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
    "smallestai>=1.0.0",
    "requests>=2.28.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
]

[project.scripts]
redcall = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "agents"]
